Implement HID enumeration and handling of "preparsed data" object

--- a/wahidx/wahidx.vcxproj
+++ b/wahidx/wahidx.vcxproj
@@ -131,10 +131,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="device.h" />
+    <ClInclude Include="hidusagex.h" />
+    <ClInclude Include="tstring.h" />
     <ClInclude Include="wahidx.h" />
+    <ClInclude Include="wdk\hid.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="device.cpp" />
+    <ClCompile Include="wdk\pnp.c" />
+    <ClCompile Include="wdk\report.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
