--- a/wahidx/wahidx.vcxproj.filters
+++ b/wahidx/wahidx.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="tstring.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="device.cpp">
@@ -49,6 +52,9 @@
     </ClCompile>
     <ClCompile Include="wdk\report.c">
       <Filter>ヘッダー ファイル\wdk</Filter>
+    </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
