--- a/hidoi/hidoi.vcxproj.filters
+++ b/hidoi/hidoi.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="watcher.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="ri.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="device.cpp">
@@ -51,6 +54,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="watcher.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="ri.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
