--- a/hidoi/hidoi.vcxproj.filters
+++ b/hidoi/hidoi.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="ri.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="parser_report.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
